# PongFromScratch

./: .gitignore  pymem.json
Code/: CMakeLists.txt
Code/.trash/: node.cpp  string_utils.cpp
Code/auto/: new  run  run_experiment  test
Code/experiments/: cgpt1.cpp  cgpt2.cpp  mine.cpp  run  test.cpp
Code/hdr/: node.h  utils.h
Code/headers/: Ball.hpp  Controller.hpp  Controllers.hpp  Globals.hpp  Paddle.hpp  Processes.hpp  window.h
Code/headers/utils/: All.hpp  Basic.hpp  StringUtils.hpp  Vectors.hpp  all.h  basic.h
Code/src/: AIController.cpp  Ball.cpp  Collider.cpp  Collider.h  Interfaces.cpp  Main.cpp  Node.cpp  Paddle.cpp  PlayerController.cpp  Processes.cpp  Window.cpp  main.cpp  node.cpp  paddle.cpp  window.cpp
Code/src/Interfaces/: LogicProcess.cpp  PhysicsProcess.cpp  RenderProcess.cpp
Code/src/Physics/: All.h  Collider.cpp  Object.cpp  Object.h  PhysicsObject.cpp
Code/src/Utils/: All.h  Basic.h  LinkedPointer.cpp  StringUtils.cpp  Structs.h  Vectors.cpp
Code/src/utils/: StringUtils.cpp  linked_pointer.cpp  string_utils.cpp
Code/tests/: run  test.cpp
Code/tools/: env.py  pymem.json
